--- a/views/campgrounds/app.ejs
+++ b/views/campgrounds/app.ejs
@@ -1,20 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-<body>
+<% layout('/layout/boilerplate') %> 
     <h1>Campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add New</a>
     </div>
-    <ul>
         <% for (let campground of campgrounds){ %>
-            <li><a href="/campgrounds/<%= campground._id %> "><%= campground.title %> </a></li>
+            <div class="card mb-3">
+             <div class="row">
+                 <div class="col-md-4">
+                    <img src="<%= campground.image %> " class="card-img-top img-fluid" alt="...">
+                 </div>
+                 <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= campground.title %> </h5>
+                        <p class="card-text"><%= campground.description %>  </p>
+                        <p class="card-text"><small class="text-muted"><%= campground.location %> </small></p>
+                        <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">view <%= campground.title %> </a>
+                      </div>
+                 </div>
+                
+             </div>
+            
+            </div>
         <% } %>      
-    </ul>
-</body>
-</html>
+    
