--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,25 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Campgrounds</title>
-</head>
-<body>
-    <h1>Add New Campgrounds</h1>
-    <form action="/campgrounds" method="post">
-        <div>
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="campground[title]">
-        </div>
-        <div>
-            <label for="location">Location:</label>
-            <input type="text" id="location" name="campground[location]">
-        </div>
-        <button>Add</button>
-    </form>
-    <a href="/campgrounds">Back</a>
+<% layout('/layout/boilerplate') %> 
+<div class="row">
+    <h1 class="text-center">Add New Campgrounds</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds" method="post">
+            <div class="mb-3">
+                <label for="title" class="form-label">Title:</label>
+                <input class="form-control" type="text" id="title" name="campground[title]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location:</label>
+                <input class="form-control" type="text" id="location" name="campground[location]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image url:</label>
+                <input class="form-control" type="text" id="image" name="campground[image]">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Price:</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1">$</span>
+                    <input type="text" class="form-control" id="price" placeholder="0.0" aria-label="price" aria-describedby="basic-addon1" name="campground[price]">
+                  </div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Description:</label>
+                <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+            </div>
+              
+            <button class="btn btn-success mb-3">Add</button>
+        </form>
+        <div ><a  href="/campgrounds">Back</a></div>
+        
+        
+    </div>
+
+</div>
     
-</body>
-</html>
