--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,23 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= campground.title %> </title>
-</head>
-<body>
-    <h1><%= campground.title %> </h1>
-    <ul>
-        <li><%= campground.location %> </li>
-        <li><%= campground.price %> </li>
-    </ul>
-    <div>
-        <a href="/campgrounds">All Campgrounds</a>
-        <a href="/campgrounds/<%= campground._id %>/edit ">Edit</a>
-        <form action="/campgrounds/<%= campground._id %>?_method=Delete" method="post">
-        <button>Delete</button>
-        </form>
+<% layout('/layout/boilerplate') %> 
+<div class="row">
+    <div class="col-6 offset-3">
+        <div class="card mb-3">
+            <img src="<%= campground.image %> " class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><%= campground.title %> </h5>
+              <p class="card-text"><%= campground.description %> </p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item text-muted"><%= campground.location %> </li>
+              <li class="list-group-item">$<%= campground.price %>/night </li>
+            </ul>
+            <div class="card-body">
+              <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">Edit</a>
+              <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=Delete" method="post">
+                <button class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+          </div>
     </div>
-</body>
-</html>
+</div>
